package Entidades;

import java.util.List;

public class ConsultarProduto {
    public Produto BuscarId(int id){
        return null;

    }
    public Produto BuscarNome(int id){
        return null;

    }
    public List ListarTodos(){
        return null;
        
    }
}
