package Entidades;

public class DeletarProduto {
    private int usuarioId;

    public int getUsuarioId() {
        return usuarioId;
    }

    public void setUsuarioId(int usuarioId) {
        this.usuarioId = usuarioId;
    }

    public boolean ConfirmarExclusao(){
        return false;

    }
    public boolean Remover(){
        return false;
        
    }
    
}
