package Entidades;

public class EditarProduto {
    private int usuarioId;

    public int getUsuarioId() {
        return usuarioId;
    }

    public void setUsuarioId(int usuarioId) {
        this.usuarioId = usuarioId;
    }
    
    public Produto CarregarDados(int id){
        return null;
        
    }
    public boolean Atualizar(Produto produto){
        return false;
    }
}
